27  May, 2022 Assignments added

--- a/HTML/Assignments/HTML/HTMFormsFormElementsFormattributesInputattributesSelectButtons/CarInsuranceForm.html
+++ b/HTML/Assignments/HTML/HTMFormsFormElementsFormattributesInputattributesSelectButtons/CarInsuranceForm.html
@@ -26,15 +26,14 @@
             <option value="audi">Audi</option>
             <option value="mercedez">Mercedez</option>
         </select><br><br>
-        <label for="age">Age</label>
-        <input id="age" type="number" name="Age" required><br><br>
-        <label for="dob">DOB</label>
-        <input id="dob" type="date" name="Date" required><br><br>
+        <label for="carage">Car Age</label>
+        <input id="carage" type="number" name="Age" required><br><br>
+        <label for="dop">Date Of Purchase/label>
+        <input id="dop" type="date" name="Date" required><br><br>
         <label for="password">Password</label>
         <input id="password" type="password" name="Password" required><br><br>
         <button type="submit" value="Submit" name="submit">Submit</button>
     </form>
-
 </body>
 
 </html>
