--- a/HTML/Assignments/HTML/HTMFormsFormElementsFormattributesInputattributesSelectButtons/BootstrapButtons.html
+++ b/HTML/Assignments/HTML/HTMFormsFormElementsFormattributesInputattributesSelectButtons/BootstrapButtons.html
@@ -11,16 +11,16 @@
 </head>
 
 <body>
-    <div class="container">
+    <div>
         <h2>Bootstrap Buttons</h2>
-        <button id="#button-1" type="button" class="btn btn-primary">Button-1</button>
-        <button id="#button-2" type="button" class="btn btn-default">Button-2</button>
-        <button id="#button-3" type="button" class="btn btn-success btn-lg">Button-3</button>
-        <button id="#button-4" type="button" class="btn btn-danger">Button-4</button>
-        <button id="#button-5" type="button" class="btn btn-warning btn-lg btn-block">Button-5</button>
-        <button id="#button-6" type="button" class="btn btn-primary" disabled ">Button-6</button>
-        <button id="#button-7 " type="button " class="btn btn-light ">Button-7</button>
-        <button id="#button-8 " type="button " class="btn btn-link ">Button-8</button>
+        <button id="button-1" type="button" class="btn btn-primary">Button-1</button>
+        <button id="button-2" type="button" class="btn btn-outline-secondary">Button-2</button>
+        <button id="button-3" type="button" class="btn btn-success btn-lg">Button-3</button>
+        <button id="button-4" type="button" class="btn btn-danger btn-sm">Button-4</button>
+        <button id="button-5" type="button" class="btn btn-warning btn-lg btn-block">Button-5</button>
+        <button id="button-6" type="button" class="btn btn-info disabled">Button-6</button>
+        <button id="button-7" type="button" class="btn btn-light">Button-7</button>
+        <button id="button-8" type="button" class="btn btn-link">Button-8</button>
     </div>
 </body>
 
