--- a/HTML/Assignments/HTML/HTMFormsFormElementsFormattributesInputattributesSelectButtons/JobAppForm.html
+++ b/HTML/Assignments/HTML/HTMFormsFormElementsFormattributesInputattributesSelectButtons/JobAppForm.html
@@ -10,22 +10,19 @@
 <body>
     <form method="POST">
         <label for="name">Name</label>
-        <input id="name" type="text" name="Name" require placeholder="Name" minlength="4" maxlength="20">
+        <input id="name" type="text" name="Name" required>
         <br>
         <label for="email">Email</label>
-        <input id="email" type="email" name="email" placeholder="Email" required>
+        <input id="email" type="email" name="email" required>
         <br>
-        <label>Gender</label>
-        <br>
-        <input id="male" type="radio" name="gender" required>
-        <label for="male">Male</label>
-        <br>
-        <input id="female" type="radio" name="gender" required>
-        <label for="female">Female</label>
-        <br>
-        <input id="transgender" type="radio" name="gender" required>
-        <label for="transgender">Transgender</label>
-        <br>
+        <label>Gender</label><br>
+        <input id="male" type="radio" value="Male" name="gender" required>
+        <label for="male">Male</label><br>
+        <input id="female" type="radio" value="Female" name="gender" required>
+        <label for="female">Female</label><br>
+        <!-- <input id="transgender" type="radio" value="Transgender" name="gender" required>
+        <label for="transgender">Transgender</label> -->
+        <br><br>
         <label for="laptop">Laptop Brands</label>
         <select name="cars" id="laptop">
             <option value="apple">Apple</option>
@@ -40,11 +37,12 @@
         <input id="dob" type="date" name="date" required>
         <br>
         <label for="password">Password</label>
-        <input id="password" type="password" required>
+        <input id="password" type="password" name="password" required>
         <br>
-        <button type="submit" name="Submit">Submit</button>
+        <label for="portfolio">Portfolio</label>
+        <input id="portfolio" type="url" placeholder="URL" name="url">
         <br>
-        <input id="portfolio" type="text" placeholder="Website URL">
+        <button type="submit" name="submit">Submit</button>
     </form>
 </body>
 
