--- a/CSS/CSSBackground/Index.html
+++ b/CSS/CSSBackground/Index.html
@@ -4,38 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        .h {
-            height: 1000px;
-            background-size: auto;
-            background-image: url("https://picsum.photos/seed/picsum/1010/1000");
-            background-repeat: no-repeat;
-            background-position: right left;
-            background-attachment: scroll;
-        }
-        .p {
-            font-weight: bold;
-            font-size: large;
-            height: 200px;
-            background-color: red;
-            background-image: linear-gradient(to right, red,orange,yellow,green,blue,indigo,violet);
-        }
-        .div {
-            background-color: blanchedalmond;
-            height: 200px;
-            background-image: repeating-linear-gradient(red, yellow 10%, green 20%);
-        }
-        .p2 {
-            height: 200px;
-            background-image: radial-gradient(red, yellow, green);
-        }
-        .p3 {
-            height: 800px;
-            background-image: conic-gradient(red, yellow, green, blue, black);
-            border-radius: 50%;
-        }
-
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="h">
