--- a/HTML/Assignments/CSS/CSSSelectorsBasicSelectorsIdselectorClassselectorCSSColours/ResponsiveResumeusingCSSGrid/index.html
+++ b/HTML/Assignments/CSS/CSSSelectorsBasicSelectorsIdselectorClassselectorCSSColours/ResponsiveResumeusingCSSGrid/index.html
@@ -15,10 +15,10 @@
                 <div class="profile-details">
                     <div class="profile">
                         <img class="profile-image" src="Pass.jpg" alt="photo">
-                        <h1 class="name">Lalit Patil</h1>
+                        <h2 class="name">Lalit Patil</h1>
                         <h4 class="designation">Fresher</h4>
-                        <hr style="padding-right: 200px; ">
                     </div>
+                    <div class="contact-items"></div>
                 </div>
             </div>
             <!-- <div class="right-content">
@@ -26,7 +26,9 @@
             </div> -->
         </section>
         <section class="right-section">
-            <div class="right-content"></div>
+            <div class="right-content">
+                <div></div>
+            </div>
         <div>
             
         </div>
