--- a/HTML/Assignments/HTMLBaseTagsBodyDiv&SpanPTagMetaTags/GettingStarted.html
+++ b/HTML/Assignments/HTMLBaseTagsBodyDiv&SpanPTagMetaTags/GettingStarted.html
@@ -3,7 +3,7 @@
 
 <head>
     <div id="text">
-        <p>Welcome to the world of Web development!</p>
+        <p>Welcome to the world of Web development</p>
     </div>
 </head>
 
